# idd-models-and-data

./: .gitignore  DESCRIPTION.yaml  LICENSE  README.md  REFACTORING_README.md  app_launcher.ipynb  demo_usage.py  environment.yml  list_apps.py  migrate_structure.py  pyproject.toml  run_dashboard.py
.binder/: environment.yml  postBuild.sh  requirements.txt
.github/workflows/: ci.yml
notebooks/shiny_test/: app.py  calculations.py  constants.py  dynamic_ui.py  plot_handlers.py  plotting_functions.py  sync_functions.py  ui_components.py
notebooks/template_scripts/: Likelihood_SIR_observation_only.R  Likelihood_SIR_observation_only_page_3.R  Likelihood_SIR_observation_only_page_4.R  Likelihood_SIR_observation_only_page_5.R
src/idd_mad/: __init__.py
src/idd_mad/apps/: __init__.py
src/idd_mad/apps/model_comparison/: app.py  server.py  ui.py
src/idd_mad/apps/multi_tab_dashboard/: app.py  server.py  ui.py
src/idd_mad/apps/sir_demo/: app.py  server.py  ui.py
src/idd_mad/models/: __init__.py  sir.py
src/idd_mad/ui/: __init__.py  components.py  layouts.py
src/idd_mad/utils/: __init__.py  calculations.py  sync.py
src/idd_mad/visualization/: __init__.py  colors.py  plotting.py
