[tool.poetry]
name = "idd-models-and-data"
version = "0.1.0"
description = "IDD Models and Data Analysis Repository"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "idd_mad", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
shiny = "^0.6.0"
xarray = "^2023.10.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true